--- a/proj2.css
+++ b/proj2.css
@@ -1,18 +1,73 @@
-body{
+@import 'lesshat';
+body {
   background-color: gray;
 }
 
-.header-row{
+.header-row {
   background-color: purple;
-  padding:30px;
+  padding: 30px;
+}
+
+.btn-head {
+  background-color: purple;
+  font-size: 24px;
+  font: center;
+  : white;
+  hover: gray;
+}
+
+.about-me {
+  margin-left: 1%;
+  margin-right: 1%;
+  background-color: lightgray;
+  border:2px;
+  border-color: darkgray;
+  border-style: solid;
+}
+.portfolio-links{
+  margin-left: 1%;
+  margin-right: 1%;
+  border: 2px red solid;
+  background-color: lightgray;
+}
+
+.about-me-text {
+  padding-top: 20px;
+  background-color: light gray;
+  font-size: 20px;
+  padding-left: 30px;
+}
+
+.thin-gray-border {
+  border-color: gray;
+  border-width: 5px;
+  border-style: solid;
+  border-radius: 50%;
+}
+
+.me-image {
+  margin: 40px;
+}
+
+.strong-me-text {
+  font-size: 30px;
+}
+
+.fa-mobile{
+  margin-left:10%;
+  padding-left:2%;
+  
+}
+.fa-database{
+  margin-left:10%;
+}
+.fa-code-fork{
+  margin-left:10%;
+}
+.fa-terminal{
+  margin-left:10%;
+}
+.fa-desktop{
   
 }
 
-.btn-head{
-  background-color:
-    purple;
-  font-size:20px;
-  font:center;
-  : white;
-  hover:gray;
-}
